@@ -11,6 +11,7 @@ cm4all-beng-proxy (0.6.15) unstable; urgency=low
   * ajp-client: auto-send empty request body chunk
   * ajp-client: register "write" event after GET_BODY_CHUNK packet
   * ajp-client: implemented request and response headers
+  * http-cache-rfc: don't rewind tpool if called recursively
 
  --
 
